--- a/credit_bancaire/views/contacts.xml
+++ b/credit_bancaire/views/contacts.xml
@@ -55,6 +55,25 @@
         <field name="view_mode">form</field>
     </record>
 
+    <record id="res_partner_view_inherited_tree" model="ir.ui.view">
+        <field name="name">res.partner.form.inherit</field>
+        <field name="model">res.partner</field>
+        <field name="inherit_id" ref="base.view_partner_tree"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='country_id']" position="after">
+                <field name="partner_type"/>
+                <field name="supplier_type"/>
+                <field name="nif" placeholder="NIF"/>
+                <field name="nis" placeholder="NIS"/>
+                <field name="rc" placeholder="RC"/>
+                <field name="swift"/>
+                <field name="bank_address"/>
+
+            </xpath>
+        </field>
+    </record>
+
+
     <record id="res_partner_view_inherited" model="ir.ui.view">
         <field name="name">res.partner.form.inherit</field>
         <field name="model">res.partner</field>
@@ -89,19 +108,20 @@
                 <field name="supplier_type" widget="radio" options="{'horizontal': true}"
                        invisible="partner_type != 'supplier'"/>
             </xpath>
-            <!--<xpath expr="//field[@name='vat']" position="attributes">
-                <attribute name="invisible">1</attribute>
-            </xpath>
-            <xpath expr="//label[@for='vat']" position="attributes">
-                <attribute name="invisible">1</attribute>
-            </xpath>
-            <xpath expr="//label[@for='vat']" position="after">
+            <!--<xpath expr="//label[@for='vat']" position="after">
 
                 <field name="nif" placeholder="NIF"/>
                 <field name="nis" placeholder="NIS"/>
                 <field name="rc" placeholder="RC"/>
 
+            </xpath>
+            <xpath expr="//label[@for='vat']" position="attributes">
+                <attribute name="invisible">1</attribute>
             </xpath>-->
+
+            <xpath expr="//field[@name='vat']" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </xpath>
         </field>
     </record>
     <!--<menuitem id="credit_contact_menu_credit"
