--- a/purchase_import/views/model_dossier_view.xml
+++ b/purchase_import/views/model_dossier_view.xml
@@ -8,8 +8,6 @@
             <tree string="Listes des Dossiers"   >
                 <field name="reference" ></field>
                 <field name="date"></field>
-
-
             </tree>
         </field>
     </record>
@@ -55,6 +53,22 @@
         <field name="view_mode">tree,form</field>
         <field name="view_id" ref="view_purchase_import_model_frais_tree"></field>
     </record>
+
+    <record id="ref_dom_action" model="ir.actions.act_window">
+        <field name="name">Reference Dom.</field>
+        <field name="res_model">import.dom</field>
+        <field name="view_mode">tree</field>
+    </record>
+
+    <record id="view_ref_dom_tree" model="ir.ui.view">
+        <field name="name">import.dom.tree</field>
+        <field name="model">import.dom</field>
+        <field name="arch" type="xml">
+            <tree string="Listes des Dossiers">
+                <field name="name" />
+            </tree>
+        </field>
+    </record>
     <menuitem
             id="menu_purchase_import_config"
             name="Configuration"
@@ -70,7 +84,13 @@
             parent="menu_purchase_import_config"
             action="open_view_purchase_import_model_frais_tree"
             sequence="20"
-
+    />
+    <menuitem
+            id="menu_ref_dom"
+            name="Reference dossier dom."
+            parent="menu_purchase_import_config"
+            action="ref_dom_action"
+            sequence="20"
     />
 </odoo>
 
