--- a/purchase_import/views/inherits_view.xml
+++ b/purchase_import/views/inherits_view.xml
@@ -77,6 +77,9 @@
                         <field name="remdoc" invisible="type_id not in [6, 7]"/>
                     </group>
                 </xpath>
+                <xpath expr="//field[@name='reference_credit']" position="inside">
+                    <field name="dom_ref" invisible="type_id != 41"/>
+                </xpath>
                 <xpath expr="//header" position="inside">
                     <button id="button_open_file" name="action_create_file" string="Créer une LC"
                             class="btn-primary" invisible="type_id != 4 or folder_id"
