--- a/purchase_import/views/inherits_view.xml
+++ b/purchase_import/views/inherits_view.xml
@@ -77,7 +77,7 @@
                         <field name="remdoc" invisible="type_id not in [6, 7]"/>
                     </group>
                 </xpath>
-                <xpath expr="//field[@name='reference_credit']" position="inside">
+                <xpath expr="//field[@name='reference_credit']" position="after">
                     <field name="dom_ref" invisible="type_id != 41"/>
                 </xpath>
                 <xpath expr="//header" position="inside">
