--- a/credit_bancaire/views/credit_operation_deb.xml
+++ b/credit_bancaire/views/credit_operation_deb.xml
@@ -31,21 +31,23 @@
                             <field name="type"/>
                             <field name="reference_credit"/>
                             <field name="ref_interne"/>
+                            <field name="ref_interne" string="Reference LC" invisible="type_id not in [39,45,48]"/>
                             <field name="ref_cheque" invisible="type_id != 40"/>
                             <field name="numero_traite" invisible="type_id != 32"/>
                             <field name="amount_invoice" invisible="type_id not in [2,3]"/>
                             <field name="partner_id" invisible="type_id in [39,5]"/>
-                            <field name="partner_id" invisible="type_id not in [39,5]" domain="[('partner_type', '=', 'supplier'),('supplier_type', '=', 'etranger')]"/>
-                            <field name="taux" widget="percentage" invisible="type_id == 39"/>
+                            <field name="partner_id" invisible="type_id not in [39,45,48,5]" string="Fournisseur" domain="[('partner_type', '=', 'supplier'),('supplier_type', '=', 'etranger')]"/>
+                            <field name="taux" widget="percentage" invisible="type_id in [39,45,48]"/>
                             <field name="type_ligne" invisible="1"/>
                             <field name="type_id" invisible="1"/>
                             <field name="montant_total_comp" invisible="1"/>
                             <field name="montant_remb_comp" invisible="1"/>
 
                             <field name="lib" invisible="type_id != 40"/>
+                            <field name="lib" string="Termes de paiement" invisible="type_id not in [39,45,48]"/>
                             <!--<field name="folder_id" invisible="1"/>-->
                         </group>
-                        <group invisible="type_id in [39]">
+                        <group invisible="type_id in [39,45,48]">
                             <field name="montant_debloque" />
                             <field name="montant_add"/>
                             <field name="montant_total" readonly="type_ligne in ['1', '3']"/>
@@ -57,9 +59,13 @@
                                    string="Date prevue d'escompte"/>
                             <field name="echeance_date"/>
                         </group>
-                        <group invisible="type_id not in [39]">
+                        <group invisible="type_id not in [39,45,48]">
+                            <field name="devise"/>
                             <field name="montant_debloque" string="Montant LC (DA)"/>
+                            <field name="montant_devise" string="Montant en devise"/>
                             <field name="deblocage_date" string="Date d'ouverture"/>
+                            <field name="taux" widget="percentage" string="Prov %" invisible="type_id in [39,45,48]"/>
+
                         </group>
                     </group>
                     <notebook>
