--- a/credit_bancaire/views/credit_operation_deb.xml
+++ b/credit_bancaire/views/credit_operation_deb.xml
@@ -36,6 +36,7 @@
                             <field name="numero_traite" invisible="type_id != 32"/>
                             <field name="amount_invoice" invisible="type_id not in [2,3]"/>
                             <field name="partner_id" invisible="type_id in [39,45,48,5]"/>
+                            <field name="partner_id" string="Client" invisible="type_id not in [35,36,37,38]"/>
                             <field name="partner_id" invisible="type_id not in [39,45,48,5]" string="Fournisseur" domain="[('partner_type', '=', 'supplier'),('supplier_type', '=', 'etranger')]"/>
                             <field name="taux" widget="percentage" invisible="type_id in [39,45,48]"/>
                             <field name="type_ligne" invisible="1"/>
@@ -64,8 +65,14 @@
                             <field name="montant_debloque" string="Montant LC (DA)"/>
                             <field name="montant_devise" string="Montant en devise"/>
                             <field name="deblocage_date" string="Date d'ouverture"/>
-                            <field name="taux" widget="percentage" string="Prov %" invisible="type_id in [39,45,48]"/>
-
+                            <field name="taux" widget="percentage" string="Prov %"/>
+                        </group>
+                        <group invisible="type_id not in [35,36,37,38]">
+                            <field name="montant_debloque" string="Montant"/>
+                            <field name="deblocage_date" string="Date d'émission"/>
+                            <field name="date_prevue_deblocage" string="Date de dépôt"/>
+                            <field name="echeance_date"/>
+                            <field name="taux" widget="percentage" string="Prov %"/>
                         </group>
                     </group>
                     <notebook>
