--- a/credit_bancaire/views/credit_operation_deb.xml
+++ b/credit_bancaire/views/credit_operation_deb.xml
@@ -25,6 +25,7 @@
                     </div>
                     <group>
                         <group>
+                            <field name="disponible_id" invisible="1"/>
                             <field name="banque_id"/>
                             <field name="type_ids" widget="many2many_tags" string="Ligne de crédit"/>
                             <field name="ligne_autorisation"/>
