--- a/purchase_import/views/purchase_international.xml
+++ b/purchase_import/views/purchase_international.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
+
+
         <record model="ir.ui.view" id="view_purchase_order_tree_inherit">
             <field name="name">purchase.order.tree.inherit</field>
             <field name="model">purchase.order</field>
@@ -12,6 +14,11 @@
                 </xpath>
             </field>
         </record>
+
+
+
+
+
         <record id="purchase_order_list" model="ir.actions.act_window">
             <field name="name">Commerce Extérieur</field>
             <field name="type">ir.actions.act_window</field>
@@ -26,14 +33,14 @@
             </field>
         </record>
         <!--    groups="purchase_import.group_importation" -->
-        <menuitem
+        <!-- <menuitem
                 id="menu_purchase_order_import"
                 name="Commerce Extérieur"
                 parent="menu_purchase_import"
 
                 action="purchase_order_list"
                 sequence="20"
-        />
+        /> -->
 
         <record id="purchase_rfq" model="ir.actions.act_window">
             <field name="name">Requests for Quotation</field>
